# wikidocs-cli

./: .gitignore  README.md  pyproject.toml
src/wikidocs_cli/: client.py  config.py  main.py  utils.py
src/wikidocs_cli/commands/: blog.py  book.py  image.py  page.py
