[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikidocs-cli"
version = "0.1.0"
description = "CLI tool for the WikiDocs API"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
wikidocs = "wikidocs_cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
